--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
+    width: 100%;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login__header-container {
+    display: flex;
+    width: 100%;
+    height: 440px;
+    background: #0E0E0E;
+    overflow: hidden;
+    position: relative;
+    gap: 100px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.image__diagonal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: rotate(-35deg);
+    gap: 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
 }
